refactor gulp to be cleaner and more efficient
- adds a umd wrapper around all js files
- pushes js files to a clean 'build' folder
- prefixes the normal css file in place
- remove stylesheet with only one property

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "~0.1.0",
     "gulp-rename": "~0.2.2",
     "gulp-autoprefixer": "0.0.6",
-    "gulp-minify-css": "~0.3.0"
+    "gulp-minify-css": "~0.3.0",
+    "gulp-wrap-umd": "~0.1.1"
   }
 }
