--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,9 @@
     "gulp-rename": "~0.2.2",
     "gulp-autoprefixer": "0.0.6",
     "gulp-minify-css": "~0.3.0",
-    "gulp-wrap-umd": "~0.1.1"
+    "gulp-wrap-umd": "~0.1.1",
+    "mocha": "~1.17.1",
+    "should": "~3.1.2",
+    "zombie": "~2.0.0-alpha29"
   }
 }
