--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bounce-exchange-alternative",
   "version": "0.0.8",
   "description": "Show some HTML before visitors leave your site.",
-  "main": "index.js",
+  "main": "build/ouibounce.js",
   "directories": {
     "test": "test"
   },
