--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "ouibounce",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "homepage": "https://github.com/carlsednaoui/ouibounce",
   "authors": [
     "Carl Sednaoui"
   ],
-  "description": "Show some HTML before visitors leave your site.",
+  "description": "A small library enabling you to display a modal before a user leaves your website.",
   "main": "build/ouibounce.js",
   "moduleType": [
     "amd",
